# Signal-Android

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .local.properties.swp  .replit  .tool-versions  .travis.yml  0001-Add-randomized-delay-to-delivery-receipts.patch  Android.mk  AndroidManifest.xml  BUILDING.md  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EncryptedBackupExporter.java  FIPS-COMPLIANCE-README.md  FIPS-README.md  FIPS-TEST-INSTRUCTIONS.md  HACKING.md  ISSUE_TEMPLATE.md  LICENSE  NOTICE  PlaintextBackupImporter.java  README-ORIG.md  README.md  README.old.md  ReproducibleBuilds.md  TRANSLATION.md  build-fips-signal.sh  build.gradle  build.gradle.kts  build.xml  build_openssl_android.sh  checksum.xml  circle.yml  constants.gradle.kts  contributing.md  (+42 more)
fips-crypto-bridge/src/main/c/: CMakeLists.txt  openssl_fips_bridge.c
jni/libspeex/include/speex/: Makefile  Makefile.am  Makefile.in  speex_config_types.h.in
jni/webrtc/base/: Android.mk  BUILD.gn  DEPS  OWNERS  array_view.h  array_view_unittest.cc  arraysize.h  asyncfile.cc  asyncfile.h  asyncinvoker-inl.h  asyncinvoker.cc  asyncinvoker.h  asyncpacketsocket.cc  asyncpacketsocket.h  asyncresolverinterface.cc  asyncresolverinterface.h  asyncsocket.cc  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asynctcpsocket_unittest.cc  asyncudpsocket.cc  asyncudpsocket.h  asyncudpsocket_unittest.cc  atomicops.h  atomicops_unittest.cc  autodetectproxy.cc  autodetectproxy.h  autodetectproxy_unittest.cc  bandwidthsmoother.cc  bandwidthsmoother.h  bandwidthsmoother_unittest.cc  base.gyp  base64.cc  base64.h  base64_unittest.cc  base_tests.gyp  basictypes.h  basictypes_unittest.cc  bind.h  (+401 more)
jni/webrtc/common_audio/: Android.mk  BUILD.gn  DEPS  OWNERS  audio_converter.cc  audio_converter.h  audio_converter_unittest.cc  audio_ring_buffer.cc  audio_ring_buffer.h  audio_ring_buffer_unittest.cc  audio_util.cc  audio_util_unittest.cc  blocker.cc  blocker.h  blocker_unittest.cc  channel_buffer.cc  channel_buffer.h  common_audio.gyp  common_audio_unittests.isolate  common_audio_unittests_apk.isolate  fft4g.c  fft4g.h  fir_filter.cc  fir_filter.h  fir_filter_neon.cc  fir_filter_neon.h  fir_filter_sse.cc  fir_filter_sse.h  fir_filter_unittest.cc  lapped_transform.cc  lapped_transform.h  lapped_transform_unittest.cc  real_fourier.cc  real_fourier.h  real_fourier_ooura.cc  real_fourier_ooura.h  real_fourier_openmax.cc  real_fourier_openmax.h  real_fourier_unittest.cc  ring_buffer.c  (+15 more)
jni/webrtc/common_audio/include/: audio_util.h
jni/webrtc/common_audio/resampler/: push_resampler.cc  push_resampler_unittest.cc  push_sinc_resampler.cc  push_sinc_resampler.h  push_sinc_resampler_unittest.cc  resampler.cc  resampler_unittest.cc  sinc_resampler.cc  sinc_resampler.h  sinc_resampler_neon.cc  sinc_resampler_sse.cc  sinc_resampler_unittest.cc  sinusoidal_linear_chirp_source.cc  sinusoidal_linear_chirp_source.h
jni/webrtc/common_audio/signal_processing/: Android.mk  auto_corr_to_refl_coef.c  auto_correlation.c  complex_bit_reverse.c  complex_bit_reverse_arm.S  complex_bit_reverse_mips.c  complex_fft.c  complex_fft_mips.c  complex_fft_tables.h  copy_set_operations.c  cross_correlation.c  cross_correlation_mips.c  cross_correlation_neon.S  cross_correlation_neon.c  division_operations.c  dot_product_with_scale.c  downsample_fast.c  downsample_fast_mips.c  downsample_fast_neon.S  downsample_fast_neon.c  energy.c  filter_ar.c  filter_ar_fast_q12.c  filter_ar_fast_q12_armv7.S  filter_ar_fast_q12_mips.c  filter_ma_fast_q12.c  get_hanning_window.c  get_scaling_square.c  ilbc_specific_functions.c  levinson_durbin.c  lpc_to_refl_coef.c  min_max_operations.c  min_max_operations_mips.c  min_max_operations_neon.S  min_max_operations_neon.c  randomization_functions.c  real_fft.c  real_fft_unittest.cc  refl_coef_to_lpc.c  resample.c  (+19 more)
jni/webrtc/common_audio/vad/: Android.mk  vad.cc  vad_core.c  vad_core.h  vad_core_unittest.cc  vad_filterbank.c  vad_filterbank.h  vad_filterbank_unittest.cc  vad_gmm.c  vad_gmm.h  vad_gmm_unittest.cc  vad_sp.c  vad_sp.h  vad_sp_unittest.cc  vad_unittest.cc  vad_unittest.h  webrtc_vad.c
jni/webrtc/common_video/: BUILD.gn  DEPS  OWNERS  bitrate_adjuster.cc  bitrate_adjuster_unittest.cc  common_video.gyp  common_video_unittests.gyp  common_video_unittests.isolate  common_video_unittests_apk.isolate  corevideo_frame_buffer.cc  i420_buffer_pool.cc  i420_buffer_pool_unittest.cc  i420_video_frame_unittest.cc  incoming_video_stream.cc  rotation.h  video_frame.cc  video_frame_buffer.cc  video_render_frames.cc  video_render_frames.h
jni/webrtc/common_video/h264/: h264_common.cc  h264_common.h  pps_parser.cc  pps_parser.h  pps_parser_unittest.cc  sps_parser.cc  sps_parser.h  sps_parser_unittest.cc  sps_vui_rewriter.cc  sps_vui_rewriter.h  sps_vui_rewriter_unittest.cc
jni/webrtc/common_video/include/: bitrate_adjuster.h  corevideo_frame_buffer.h  frame_callback.h  i420_buffer_pool.h  incoming_video_stream.h  video_frame_buffer.h  video_image.h
jni/webrtc/common_video/libyuv/: libyuv_unittest.cc  webrtc_libyuv.cc
jni/webrtc/modules/audio_coding/: Android.mk  BUILD.gn  DEPS  OWNERS  audio_coding.gni  audio_coding.gypi  audio_coding_tests.gypi
jni/webrtc/modules/audio_processing/: BUILD.gn  DEPS  OWNERS  audio_buffer.cc  audio_buffer.h  audio_processing.gypi  audio_processing_impl.cc  audio_processing_impl.h  audio_processing_impl_locking_unittest.cc  audio_processing_impl_unittest.cc  audio_processing_performance_unittest.cc  audio_processing_tests.gypi  audio_processing_unittest.cc  common.h  debug.proto  echo_cancellation_bit_exact_unittest.cc  echo_cancellation_impl.cc  echo_cancellation_impl.h  echo_cancellation_impl_unittest.cc  echo_control_mobile_impl.cc  echo_control_mobile_impl.h  echo_control_mobile_unittest.cc  gain_control_for_experimental_agc.cc  (+26 more)
jni/webrtc/system_wrappers/: BUILD.gn  DEPS  OWNERS  cpu_features_chromium.gyp  cpu_features_webrtc.gyp  system_wrappers.gyp  system_wrappers_tests.gyp  system_wrappers_unittests.isolate  system_wrappers_unittests_apk.isolate
(+22275 files in other folders)
